cmake_minimum_required(VERSION 3.25)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetCode main.cpp Arrays101/1089_duplicateZeros.cpp Arrays101/283_moveZeroes.cpp Arrays101/88_mergeSortedArray.cpp Arrays101/977_squaresOfASortedArray.cpp Arrays101/448_findAllNumbersDisappearedInAnArray.cpp ArraysAndString/498_diagonalTraverse.cpp)
