cmake_minimum_required(VERSION 3.25)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetCode main.cpp ProblemsSolved/Arrays101/1089_duplicateZeros.cpp ProblemsSolved/Arrays101/283_moveZeroes.cpp ProblemsSolved/Arrays101/88_mergeSortedArray.cpp ProblemsSolved/Arrays101/977_squaresOfASortedArray.cpp ProblemsSolved/Arrays101/448_findAllNumbersDisappearedInAnArray.cpp ProblemsSolved/ArraysAndString/498_diagonalTraverse.cpp)
